# harmonyOS_vulkan

./: build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/cpp/: CMakeLists.txt  main.cpp  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/cpp/types/vulkan_library/: CMakeLists.txt  main.cpp
entry/src/main/cpp/types/vulkan_library/include/: application.h  config.h
entry/src/main/cpp/types/vulkan_library/include/utils/: command_context.h  pipelines.h  swap_chain.h  utils.h
entry/src/main/cpp/types/vulkan_library/src/: application.cpp
entry/src/main/cpp/types/vulkan_library/src/utils/: command_context.cpp  pipelines.cpp  queues.cpp  render_pass.cpp  swap_chain.cpp  sync_objects.cpp
entry/src/main/ets/pages/: Index.ets
